--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -124,3 +124,13 @@ wrapt==1.14.1
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
+
+markdown==3.3.7
+    # via
+    #   markdown-include
+    #   mkdocs
+    #   mkdocs-autorefs
+    #   mkdocstrings
+    #   pymdown-extensions
+markdown-include==0.6.0
+    # via -r docs/requirements.in
